--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   debezium_tester_app:
     image: debezium_tester_app
@@ -15,7 +14,6 @@ services:
       - zookeeper-debezium
       - kafka-debezium
       - tester_db
-
 
   zookeeper-debezium:
     image: debezium/zookeeper:1.4
@@ -66,19 +64,24 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+      POSTGRES_HOST_AUTH_METHOD: md5
     ports:
       - "5432:5432"
-
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - debezium-compose-network
 
+  # Redpanda Console for monitoring Kafka
   console:
-    image: docker.redpanda.com/vectorized/console:latest
-    entrypoint: /bin/sh
-    command: -c "echo \"$$CONSOLE_CONFIG_FILE\" > /tmp/config.yml; /app/console"
-    environment:
-      CONFIG_FILEPATH: /tmp/config.yml
-      CONSOLE_CONFIG_FILE: |
+    image: docker.redpanda.com/redpandadata/console:v2.5.2
+    container_name: console
+    hostname: console
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        cat > /tmp/config.yml << 'EOF'
         kafka:
           brokers: ["kafka-debezium:9092"]
         connect:
@@ -86,13 +89,19 @@ services:
           clusters:
             - name: connect-debezium
               url: http://connect-debezium:8083
+        EOF
+        /app/console --config.filepath=/tmp/config.yml
     ports:
-      - 8080:8080
+      - "8080:8080"
     networks:
       - debezium-compose-network
     depends_on:
       - kafka-debezium
+      - connect-debezium
 
 networks: 
   debezium-compose-network:
     driver: bridge
+
+volumes:
+  postgres_data:
